# renderer

./: Cargo.toml  README.md
shaders/: cam.glsl  cam.wgsl  cam_frag.glsl  color.glsl
src/: camera.rs  controls.rs  crc.rs  events.rs  main.rs  math.rs  png.rs  texture.rs  uniforms.rs  util.rs  window.rs
src/png/: crc.rs  mod.rs
